<resources>
    <string name="app_name">Guia del Cesar</string>
    <string name="text_info">CONOCE MÁS SOBRE VALLEDUPAR Y SUS ALREDEDORES</string>
    <string name="descripcion">Descripción :</string>
    <string name="string_municipio_eventos">Eventos que se realizan en los diferentes municipios del cesar</string>
    <string-array name="name_municipios">
        <item>Valledupar</item>
        <item>La paz</item>
        <item>Manaure</item>
        <item>Pueblo Bello</item>
        <item>Aguachica</item>
        <item>Codazzi</item>
        <item>SAN DIEGO</item>
        
    </string-array>
    <string-array name="Descripcion_municipios">
        <item>
            Valledupar, también llamada Ciudad de los Santos Reyes del Valle de Upar, es un municipio colombiano, capital del departamento del Cesar. Es la cabecera del municipio homónimo, el cual tiene una extensión de 4493 km², 493 342 habitantes y junto a su área metropolitana reúne 677 9411​ habitantes; está conformado por 25 corregimientos y 102 veredas.
            \n\n
            Está ubicada al nororiente de la Costa Atlántica colombiana, a orillas del río Guatapurí, en el valle del río Cesar formado por la Sierra Nevada de Santa Marta al occidente y la serranía del Perijá al oriente.
        </item>
        <item>
            La Paz, es un municipio colombiano ubicado en el departamento del Cesar, en el área metropolitana de Valledupar, cuya cabecera municipal es Los Robles. Cuenta con una población de alrededor de 25.000 habitantes, es centro de una rica comarca ganadera (vacunos). Se localiza a 12 km al sur de la ciudad de Valledupar. Las almojábanas son parte importante de su gastronomía. Alberga una sede de la Universidad Nacional de Colombia.
            \n\nMas información: en https://es.wikipedia.org/wiki/La_Paz_(Cesar)
        </item>
        <item>
            <b>Manaure Balcón del Cesar</b> es uno de los 25 municipios que conforman el departamento del Cesar en la región Andina , Colombia. Limita al norte con La Jagua del Pilar (departamento de La Guajira), al sur y al occidente con el municipio de La Paz y al oriente con la República Bolivariana de Venezuela. Es reconocido en la región por la suavidad de su clima. Posee una precipitación anual de 1361 mm. Hace parte del Área metropolitana de Valledupar.
            \n\nMas información en: https://es.wikipedia.org/wiki/Manaure_Balc%C3%B3n_del_Cesar
        </item>
        <item>
            <b>Pueblo Bello</b> es uno de los 25 municipios colombianos que integran el Departamento del Cesar. Se encuentra sobre la Sierra Nevada de Santa Marta a una altitud de 1200 m.s.n.m. en un estrecho valle de montaña sobre un altiplano. Es un importante centro para servicios de salud y abasto para la población Indígena de la Sierra y un atractivo sitio turístico no solo para los habitantes del Cesar sino también de otras regiones de Colombia por tener en su jurisdicción la capital de la Cultura Arhuaca Nabusímake con todas las características de la cultura indígena en pleno esplendor.\n\n
            mas información en: https://es.wikipedia.org/wiki/Pueblo_Bello
        </item>
        <item>
            Aguachica es una ciudad colombiana ubicada al nororiente del país, en el departamento del Cesar. Por economía y población es la segunda ciudad del departamento y uno de los centros urbanos más importantes de la región.\n
            La ciudad se encuentra en una posición geográfica estratégica, siendo un punto de conexión entre el norte y el interior oriental del país a través de la Troncal del Magdalena (Ruta Nacional 45) y la Troncal Central (Ruta Nacional 45A), contando además con transporte aéreo, férreo y en forma paralela con la vía fluvial del río Magdalena.\n
        </item>
        <item>
            Agustín Codazo o simplemente Codazo, conocida como la capital agroenergética de Colombia, es un municipio localizado al norte del departamento del Cesar, limita al norte con La Paz, al oeste con El Paso, al sur con Becerril y al este con Venezuela.​\n
            Es la tercera Ciudad en población e importancia del departamento del Cesar, Es un importante centro en producción agroindustrial, Agrícola y ganadera en el departamento, Además es el 8° Productor de carbón de Colombia. Posee una situación geográfica estratégica que favorece su integración con los mercados regionales y los principales centros exportadores del país.
        </item>
        <item>
            Villa de San Diego es un municipio de Colombia, situado en el nordeste del país en el departamento de Cesar. La cabecera del municipio está situada a 20 km3​ de la capital departamental, Valledupar, y hace parte del área metropolitana de la ciudad. El área municipal es de 614 km² y limita por el norte con Valledupar y La Paz, por el este y el sur con La Paz y por el oeste con Valledupar. Forman parte del municipio los corregimientos de: Media Luna, Tocaimo, El Rincón, Los Tupes, Las Pitillas, Los Brasiles y Nuevas Flores. Es cabecera de círculo notarial con una notaría, perteneciente al círculo principal de registro y al distrito judicial de Valledupar; el Municipio de San Diego corresponde a la circunscripción electoral del Cesar. Al 1º de enero de 1995 tenía registrados 2.643 predios urbanos y 555 rurales.
        </item>
        <item>
            Astrea es un municipio colombiano, situado en el noreste del país, en el departamento de Cesar. Limita al norte y al oeste con el municipio de Pijiño del Carmen (ubicado en el departamento de Magdalena). Por el norte, también limita con El Paso. Por el sur con el departamento de Magdalena (municipios de San Sebastián de Buenavista y Guamal) y al este con Chimichagua.
        </item>
    </string-array>
    <string-array name="desciption_eventos">
        <item>
            En valledupar se realiza anual mente el Festival de la Leyenda Vallenata, llamado también Festival Vallenato, es el evento más importante del vallenato.1​ Se celebra anualmente a finales de abril o principios de mayo desde 1968 en Valledupar, y es organizado por la Fundación Festival de la Leyenda Vallenata, la cual vela por la defensa y difusión de la expresiones folclóricas y populares que rodean la música vallenata. El festival busca preservar cuatro de los cinco aires o ritmos del vallenato: paseo, merengue, son y puya.2​ Además, el género de la piqueria, la parranda, la poesía campesina, cuentos, leyendas, mitos, tradición oral, expresiones literarias, socioculturales y artísticas asociadas al vallenato\n\n
            Feria del dulce en la plaza Alfonso lopez\n
            Durante la Semana Santa, 65 puestos de dulces instalados en la recién renovada Plaza Alfonso López atendieron a miles de visitantes entre locales y turistas
        </item>
        <item>
            LA PAZ\n\n
            Festival Cultural La Paz en el Mundo\n
            Los orígenes se remontan a la necesidad de algunos jóvenes por impulsar el acercamiento de nuevas formas de expresión artísticas y culturales en el municipio de Los Reyes La Paz.
        </item>
        <item>
            MANAURE\n\n
            FESTIVAL Y REINADO DE LA SAL, GAS Y FLAMENCOS\n
            El Festival y Reinado de la Sal, Gas y Flamenco, da a conocer los aspectos culturales, industriales, comerciales y turísticos de esta región. Los cuales son el impulsor del desarrollo de Manaure y sus habitantes.\n
            Se realiza cada año en el mes de junio.
        </item>
        <item>
            PUEBLO BELLO\n\n
            Fiestas Patronales Virgen del Carmen\n
            Cada 16 de julio los católicos le rinden tributo a Nuestra Señora del Carmen, patrona de los conductores, de los Bomberos y la reina de las Fuerzas Armadas de Colombia.\n
            realizando siempre una caravana que se hace partiendo de las distintas veredas del Municipio de Granada, hasta llegar al parque principal que por lo general se realiza un misa y después se dispone el Padre de la Parroquia a dar bendiciones conductores y sus vehículos.
        </item>
        <item>
            AGUACHICA\n\n
            En Aguachica podemos realizar diferentes actividades acuáticas y ecoturismo gracias a su ubicación geográfica, queda entre la Cordillera Oriental y el Valle del río Magdalena.\n\n

            BOSQUE EL AGÜIL\n

            En el sector urbano sobresale el bosque el Agüil; como zona verde de gran biodiversidad que se encuentra en la parte norte de la periferia de la zona urbana; posee más de 70 especies de árboles nativos de la Región.\n\n
            Festividades: Fiestas patronales celebradas en agosto
        </item>
        <item>
            CODAZZI\n\n
            Llamada “CIUDAD BLANCA DE COLOMBIA” por ser una región líder en la producción de algodón. El municipio de Agustín Codazzi se encuentra ubicado en la parte norte del Departamento del Cesar a 45 minutos del la capital del departamento, Valledupar, hace parte de la Serranía de Perijá.\n\n

            Algunos de sus eventos mas importantes son:\n\n

            Festividades (Tarima Alfonso Ávila Quintero)\n
            El municipio de Agustín Codazzi tiene como principal evento cultural y turístico el Festival de Música Vallenata en Guitarra. Fundado desde 1987, en los aires de música tradicional en tríos, paseo y merengue.\n\n

            EL FESTIVAL VALLENATO EN GUITARRAS EN AGUSTÍN CODAZZI
            Es catalogado por el ministerio de cultura como uno de los 17 festivales de música tradicional más importante del país; el primero en su género a nivel nacional.\n\n

            Es importante destacar que el certamen goza de una gran aceptación por parte del guitarristas y compositores del ámbito nacional.\n

            Año tras año ha venido aumentando el número de participantes; lo que ha permitido el interés de los medios de comunicación, televisivos, radiales y escritos para realizar el cubrimiento y difusión de nuestro magno evento, el cual se realiza todos los años a mediados del agosto-
        </item>
        <item>
           El municipio de San Diego ofrece a sus visitantes diversos eventos que fomentan la cultura, el folclor y la religiosidad de sus habitantes, entre ellos se celebran el Festival de Acordeones, Versos y Canciones celebrado en junio, el festival de Voces, Versos y Canciones del barrio La Victoria en diciembre, las fiestas de la Virgen del Perpetuo Socorro que se celebra el segundo domingo de junio, las de la Virgen del Carmen el 16 de julio la de San Rafael que se celebra el 24 de Octubre en el corregimiento de los Tupes, el festival del Aguacate en el corregimiento de Media Luna, el cumpleaños de nuestro Señor Jesucristo y la Hermosísima Semana Santa.\n\n
            mas informacion en: http://www.colombiaturismoweb.com/DEPARTAMENTOS/CESAR/MUNICIPIOS/SAN%20DIEGO/SAN%20DIEGO.htm
        </item>
    </string-array>
    <string-array name="latitud">
        <item>10.4650361</item>
        <item>10.3888025</item>
        <item>10.3910411</item>
        <item>10.409489</item>
        <item>8.309492394642376</item>
        <item>10.038834</item>
        <item>10.333932</item>
    </string-array>
    <string-array name="longitud">
        <item>-73.2528426</item>
        <item>-73.1721935</item>
        <item>-73.0270699</item>
        <item>-73.591486</item>
        <item>-73.61684205886704</item>
        <item>-73.235670</item>
        <item>-73.181319</item>
    </string-array>
    <string name="buscar">Buscar</string>
    <string name="municipios">Municipios</string>
    <string name="todosservice">Todos</string>
    <string name="drogueriaservice">Droguerias</string>
    <string name="hospitalesservice">Hospitales</string>
    <string name="turismoservice">Turismo</string>
</resources>