<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/default_circle_indicator_stroke_color"
    tools:context=".GUI.ServiciosPorMunicipio">ç
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="fitCenter"
            android:src="@drawable/header_servicio"
            android:layout_marginBottom="@dimen/Borde"/>
        <TextView
            android:id="@+id/muniServicioTV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/design_default_color_secondary_variant"
            android:gravity="center"
            android:text="@string/municipios"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/txtBuscarService"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <Button
                android:id="@+id/btnFiltrarService"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buscar" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Borde"
            android:layout_marginBottom="@dimen/Borde">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioTodos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todosservice" />

                    <RadioButton
                        android:id="@+id/radioDrogueria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drogueriaservice" />

                    <RadioButton
                        android:id="@+id/radioHospitales"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hospitalesservice" />

                    <RadioButton
                        android:id="@+id/radioTurismo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/turismoservice" />

                </RadioGroup>

            </LinearLayout>
        </ScrollView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaHospitalesAPI"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>